--- a/style.css
+++ b/style.css
@@ -154,5 +154,7 @@ div.description {
   background-color: coral;
 }
 div.description p{
-  
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: rgb(64, 91, 169);
+  font-weight: bold;
 }
