--- a/style.css
+++ b/style.css
@@ -3,17 +3,19 @@ div.container {
   border: 5px solid;
   border-radius: 20px;
   max-width: 210mm;
-  max-height: 297mm;
+  max-height: 500mm;
   padding: 10mm;
   box-sizing: border-box;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   border: 5px solid transparent;
   border-image: linear-gradient(to right, #c7b8ea, #d2c4e4, #e4d6f5) 30;
   transition: transform 0.2s ease-in-out;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 @media print {
   div.container {
@@ -61,33 +63,65 @@ div.subhead h2{
     text-shadow: 0 0 0 yellow;
   }
 }
+
 nav ul {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0.5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-image: linear-gradient(to right, #FFC67D, coral);
-  background-color: coral;
-  padding: 1em;
+  background: linear-gradient(to right, #FFC67D, coral);
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
 }
 
 nav ul li {
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
-nav ul li a {
-  font-family: 'Bauhaus 93', sans-serif;
-  font-size: 15px;
-  font-weight: bold;
+nav ul li a, .separator {
+  font: bold 15px 'Bauhaus 93', sans-serif;
   color: rgb(64, 91, 169);
   text-decoration: none;
   transition: color 0.2s ease, text-shadow 0.2s ease;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   animation: pulse 2s infinite;
+}
+
+nav ul li a {
+  font: bold 15px 'Bauhaus 93', sans-serif;
+  color: rgb(64, 91, 169);
+  text-decoration: none !important;
+  transition: color 0.2s ease, text-shadow 0.2s ease;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  animation: pulse 2s infinite;
+  overflow: hidden;
+}
+
+nav ul li a:hover {
+  color: rgb(171, 145, 230);
+  text-shadow: 0 0 10px rgba(240, 189, 189, 0.5);
+  transform: scale(1.05);
+  text-decoration: underline;
+}
+
+nav ul li a:hover::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: rgb(171, 145, 230);
+  margin-top: 2px;
+  transition: all 0.2s ease;
+  text-decoration: none;
+}
+
+
+.separator {
+  margin: 0 10px;
+  text-shadow: 0 0 10px rgb(171, 145, 230);
 }
 
 @keyframes pulse {
@@ -100,36 +134,6 @@ nav ul li a {
   100% {
     transform: scale(1);
   }
-}
-
-nav ul li a:hover {
-  color: rgb(171, 145, 230); 
-  text-shadow: 0 0 10px rgba(240, 189, 189, 0.5);
-  transform: scale(1.05);
-}
-
-nav ul li a:hover::after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: rgb(171, 145, 230);
-  margin-top: 2px;
-  transition: all 0.2s ease;
-}
-
-.separator {
-  font-family: 'Bauhaus 93', sans-serif;
-  font-size: 15px;
-  font-weight: bold;
-  color: rgb(64, 91, 169);
-  text-decoration: none;
-  transition: color 0.2s ease, text-shadow 0.2s ease;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  animation: pulse 2s infinite;
-  margin: 0 10px; 
-  text-shadow: 0 0 10px rgb(171, 145, 230);
-  
 }
 
 div.img {
@@ -147,16 +151,17 @@ div.img img {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border: 20px solid rgb(64, 91, 169);
   transition: transform 0.2s ease-in-out;
+  flex: 0 0 50%
 }
 div.description {
-  border: 1px solid #ddd;
-  border-radius: 10px;
+  border: 2px solid rgb(64, 91, 169);
+  border-radius: 15px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
   padding: 20px;
 
   font-family: Arial, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
 
   background-image: linear-gradient(to right, coral, #FFC67D);
   background-color: coral;
