--- a/style.css
+++ b/style.css
@@ -66,7 +66,10 @@ div.subhead h2{
 
 nav ul {
   list-style: none;
-  margin: 0;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   padding: 0.5em;
   display: flex;
   justify-content: space-between;
@@ -78,7 +81,8 @@ nav ul {
 }
 
 nav ul li {
-  margin-right: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 nav ul li a, .separator {
@@ -157,7 +161,10 @@ div.description {
   border: 2px solid rgb(64, 91, 169);
   border-radius: 15px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: auto;
   padding: 20px;
 
   font-family: Arial, sans-serif;
@@ -170,52 +177,4 @@ div.description p{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: rgb(64, 91, 169);
   font-weight: bold;
-}
-@media only screen and (max-width: 480px) {
-  div.container {
-    max-width: 90%;
-    padding: 10px;
-  }
-  nav ul {
-    padding: 0.5em;
-  }
-  div.img {
-    width: 80%;
-    height: 80%;
-  }
-  div.description {
-    padding: 10px;
-  }
-}
-@media only screen and (min-width: 481px) and (max-width: 768px) {
-  div.container {
-    max-width: 80%;
-    padding: 20px;
-  }
-  nav ul {
-    padding: 1em;
-  }
-  div.img {
-    width: 70%;
-    height: 70%;
-  }
-  div.description {
-    padding: 20px;
-  }
-}
-@media only screen and (min-width: 769px) {
-  div.container {
-    max-width: 70%;
-    padding: 30px;
-  }
-  nav ul {
-    padding: 1.5em;
-  }
-  div.img {
-    width: 60%;
-    height: 60%;
-  }
-  div.description {
-    padding: 30px;
-  }
 }
