--- a/achie.css
+++ b/achie.css
@@ -275,3 +275,14 @@ div.container {
       display: none;
     }
   }
+  @media only screen and (max-width: 480px) {
+
+    div.container {
+      max-width: 300px;
+      margin: 10px auto;
+    }
+    div.img img {
+      width: 100%;
+      height: 100%;
+    }
+  }
