--- a/ed.css
+++ b/ed.css
@@ -277,3 +277,14 @@ div.eds h2{
     display: none;
   }
 }
+@media only screen and (max-width: 480px) {
+
+  div.container {
+    max-width: 300px;
+    margin: 10px auto;
+  }
+  div.img img {
+    width: 100%;
+    height: 100%;
+  }
+}
