--- a/achie.css
+++ b/achie.css
@@ -270,4 +270,9 @@ div.container {
   .card img:active {
     transform: scale(1.75);
   }
-
+  @media only screen and (max-width: 768px) {
+    div.container {
+      max-width: 100%;
+      margin: 10px auto;
+    }
+  }
