--- a/pi-style.css
+++ b/pi-style.css
@@ -411,3 +411,9 @@ div.container {
       border-color: transparent;
     }
   } 
+  @media only screen and (max-width: 768px) {
+    div.container {
+      max-width: 100%;
+      margin: 10px auto;
+    }
+  }
