--- a/style.css
+++ b/style.css
@@ -270,3 +270,10 @@ div.description p{
 .scroll-effect.active {
   transform: translateY(0);
 }
+
+@media only screen and (max-width: 768px) {
+  div.container {
+    max-width: 100%;
+    margin: 10px auto;
+  }
+}
