--- a/achie.css
+++ b/achie.css
@@ -273,6 +273,6 @@ div.container {
   @media only screen and (max-width: 768px) {
     div.container {
       max-width: 100%;
-      margin: 10px auto;
+      margin: auto auto;
     }
   }
