--- a/am.css
+++ b/am.css
@@ -297,6 +297,6 @@ div.description p{
 @media only screen and (max-width: 768px) {
   div.container {
     max-width: 100%;
-    margin: 10px auto;
+    margin: auto auto;
   }
 }
