--- a/am.css
+++ b/am.css
@@ -304,6 +304,8 @@ div.description p{
   nav ul {
     flex-direction: row;
     justify-content: space-between;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   nav ul li {
     margin-right: 10px;
