--- a/style.css
+++ b/style.css
@@ -281,6 +281,8 @@ div.description p{
   nav ul {
     flex-direction: row;
     justify-content: space-between;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   nav ul li {
     margin-right: 10px;
