--- a/achie.css
+++ b/achie.css
@@ -280,6 +280,8 @@ div.container {
     nav ul {
       flex-direction: row;
       justify-content: space-between;
+      margin-left: 10px;
+      margin-right: 10px;
     }
     nav ul li {
       margin-right: 10px;
