--- a/ed.css
+++ b/ed.css
@@ -281,10 +281,13 @@ div.eds h2{
   nav ul {
     flex-direction: row;
     justify-content: space-between;
+    margin-left: 10px;
+    margin-right: 10px;
   }
   nav ul li {
     margin-right: 10px;
     margin-left: 10px;
+    
   }
   nav ul li a {
     font-size: 14px;
