--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ div.description p{
 @media only screen and (max-width: 768px) {
   div.container {
     max-width: 100%;
-    margin: auto auto;
+    margin: auto 10px;
   }
 }
 @media only screen and (max-width: 768px) {
