--- a/pi-style.css
+++ b/pi-style.css
@@ -418,11 +418,17 @@ div.container {
     }
   }
   @media only screen and (max-width: 768px) {
+    div.container {
+      max-width: 100%;
+      margin: auto 20px;
+    }
+  }
+  @media only screen and (max-width: 768px) {
     nav ul {
       flex-direction: row;
       justify-content: space-between;
-      margin-left: 10px;
-      margin-right: 10px;
+      margin-left: 15px;
+      margin-right: 15px;
     }
     nav ul li {
       margin-right: 10px;
