--- a/ed.css
+++ b/ed.css
@@ -274,20 +274,19 @@ div.eds h2{
 @media only screen and (max-width: 768px) {
   div.container {
     max-width: 100%;
-    margin: auto auto;
+    margin: auto 20px;
   }
 }
 @media only screen and (max-width: 768px) {
   nav ul {
     flex-direction: row;
     justify-content: space-between;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
   }
   nav ul li {
     margin-right: 10px;
     margin-left: 10px;
-    
   }
   nav ul li a {
     font-size: 14px;
